rns-lang/tests/snapshots/parser-outside_class_directive-static_keyword.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
; some comment
; another comment
static
.class public HelloWorld

----- STDOUT -----

----- STDERR -----
Error: Unexpected keyword before class definition
   ╭─[ test_data/integration/parser/outside_class_directive/static_keyword.ja:3:1 ]
   │
 3 │ static
   │ ───┬──  
   │    ╰──── The 'static' keyword must appear inside a class definition.
   │ 
   │ Note: Keywords like 'public' and 'static' are access modifiers that must appear within '.class' or '.method' directives.
───╯
