rns-lang/tests/snapshots/parser-outside_class_directive-string_literal.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
"Hello World"
.class public HelloWorld

----- STDOUT -----

----- STDERR -----
Error: unexpected string literal before class definition
   ╭─[ test_data/integration/parser/outside_class_directive/string_literal.ja:1:1 ]
   │
 1 │ "Hello World"
   │ ──────┬──────  
   │       ╰──────── this string literal must appear inside a class definition
   │ 
   │ Note: String literals are constant values that must appear inside '.code' blocks as instruction arguments.
───╯
